bk_ida/gccida/c1/spill_failure
/data/output_dir/patch/gcc/ida/clang/O1/gcc-clang-O1/spill_failure/src/reload1.c:2360:32: error: must use 'enum' tag to refer to type 'reg_class'
void  spill_failure( rtx insn, reg_class a2) 
                               ^
                               enum 
/data/output_dir/patch/gcc/ida/clang/O1/gcc-clang-O1/spill_failure/src/reload1.c:2364:60: error: use of undeclared identifier 'spill_failure_reg_class_names'
error( "unable to find a register to spill in class `%s'", spill_failure_reg_class_names[a2]); 
                                                           ^
/data/output_dir/patch/gcc/ida/clang/O1/gcc-clang-O1/spill_failure/src/reload1.c:2365:40: error: too many arguments provided to function-like macro invocation
fatal_insn( "this is the insn:", insn, &off_6CC868[4], 1910, "spill_failure"); 
                                       ^
/data/output_dir/patch/gcc/ida/clang/O1/gcc-clang-O1/spill_failure/src/toplev.h:50:9: note: macro 'fatal_insn' defined here
#define fatal_insn(msgid, insn) \
        ^
/data/output_dir/patch/gcc/ida/clang/O1/gcc-clang-O1/spill_failure/src/reload1.c:2365:1: error: use of undeclared identifier 'fatal_insn'; did you mean '_fatal_insn'?
fatal_insn( "this is the insn:", insn, &off_6CC868[4], 1910, "spill_failure"); 
^~~~~~~~~~
_fatal_insn
/data/output_dir/patch/gcc/ida/clang/O1/gcc-clang-O1/spill_failure/src/toplev.h:44:13: note: '_fatal_insn' declared here
extern void _fatal_insn                 PARAMS ((const char *,
            ^
/data/output_dir/patch/gcc/ida/clang/O1/gcc-clang-O1/spill_failure/src/reload1.c:2367:83: error: use of undeclared identifier 'spill_failure_reg_class_names'
error_for_asm( insn, "can't find a register in class `%s' while reloading `asm'", spill_failure_reg_class_names[a2]); 
                                                                                  ^
5 errors generated.
make: *** [/data/output_dir/patch/gcc/ida/clang/O1/gcc-clang-O1/spill_failure/src/obj/reload1.o] Error 1
